CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SpatialIndex)

SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -arch=sm_11" )
FIND_PACKAGE(CUDA REQUIRED)
INCLUDE(FindCUDA)

SET(MYLIB "FLATIndex")
SET(MYLIBCUDA "FLATIndexCuda")

INCLUDE_DIRECTORIES (
  ${CMAKE_SOURCE_DIR}/../include/
  /usr/include/boost/ 
  ${CMAKE_SOURCE_DIR}/../lib/bbpdias/BBPSDK/include/
  ${CMAKE_SOURCE_DIR}/../lib/RTree/include/
)
	

ADD_DEFINITIONS("-O3 -Wall -DPROFILING -DFATAL -DDEBUG -DINFORMATION -DPROGRESS ")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin/)
SET(LIBRARY_OUTPUT_PATH    ${CMAKE_SOURCE_DIR}/../lib/)
SET(SRC_DIR ${CMAKE_SOURCE_DIR}/../src/)
SET(APP_DIR ${CMAKE_SOURCE_DIR}/../apps/)
SET(INC_DIR ${CMAKE_SOURCE_DIR}/../include/)
SET(WRP_DIR ${CMAKE_SOURCE_DIR}/../wrapper/)

FILE(GLOB SRC_FILES_CU  ${SRC_DIR}/*.cu)
FILE(GLOB SRC_FILES_C  ${SRC_DIR}/*.cpp)

CUDA_ADD_LIBRARY(${MYLIBCUDA} STATIC ${SRC_FILES_CU})
CUDA_ADD_LIBRARY(${MYLIB} STATIC ${SRC_FILES_C})
FILE(GLOB MAIN_FILES ${APP_DIR}*.cpp)
FOREACH(APPNAME ${MAIN_FILES})
        GET_FILENAME_COMPONENT(BASENAME ${APPNAME} NAME_WE)
        CUDA_ADD_EXECUTABLE(${BASENAME} ${APPNAME})
        TARGET_LINK_LIBRARIES( ${BASENAME} ${MYLIB} ${MYLIBCUDA} ${BBPSDK_LIB} ${BOOST_LIB})    
ENDFOREACH(APPNAME ${MAIN_FILES})
MAKE_DIRECTORY(${LIBRARY_OUTPUT_PATH})
MAKE_DIRECTORY(${EXECUTABLE_OUTPUT_PATH})

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
#SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
#SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
